syntax = "proto2";

package mediapipe;

import "mediapipe/framework/calculator.proto";

message GaussianBlurCalculatorOptions {
    extend CalculatorOptions {
        optional GaussianBlurCalculatorOptions ext = 264995622;
    }

    optional int32 ksize = 1;

    optional double sigma_x = 2 [default = 15.0];
    optional double sigma_y = 3 [default = 15.0];
}